# fire-drop-watcher

./: .gitignore  README.md  SCENARIO.md  training_features_ns_2023.csv
backend/: README.md  aao_briefing.py  fuel_lookup.py  hfi_norm_bounds.npy  main.py  model_inference.py  pyproject.toml
backend/data/: barrington_2023.json  tantallon_2023.json
backend/helpers/: __init__.py  cwfis_fire_data.py  mock_environment.py  mock_fire.py  sentinel_shrub.py  sentinel_terrain.py  terrain.py  weatherapi.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: FireMap.tsx  FireMapLoader.tsx
model/: MODEL_README.md  fuel_label_encoder.pkl  train_wildfire_model.py
