[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "requests>=2.34.2",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "joblib>=1.4.0",
    "scikit-learn>=1.6.0",
]
